--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 			<div class="destination" id="paris">
                 <h2>paris</h2>
             </div>
+			
+			<div class="destination" id="sco">
+                <h2>sco</h2>
+            </div>
         </div>
     </div>
 
